--- a/src/layouts/layouts.less
+++ b/src/layouts/layouts.less
@@ -12,6 +12,7 @@
 	height: 100%;
 	display: flex;
 	flex-direction: column;
+	align-items: center;
 	>div {
 		flex-shrink: 0;
 		&:nth-of-type(2) {
