--- a/src/routes/HomePage/style.less
+++ b/src/routes/HomePage/style.less
@@ -9,16 +9,67 @@
     text-align: center;
     .moneyCount {
        .mx-sC(32px; #FF4500);
-       margin-top: 20%;
        span {
            font-size: 72px;
            font-weight: bold;
        }
     }
+    .moneyOption {
+        display: flex;
+        justify-content: space-between;
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        height: 56px;
+        padding: 0 48px;
+        div {
+            display: flex;
+            position: relative;
+            justify-content: center;
+            flex-direction: column;
+            width: 100%;
+            cursor: pointer;
+            &:not(:last-child):after {
+                content: '';
+                position: absolute;
+                top: 50%;
+                right: 0;
+                transform: translateY(-50%);
+                width: 1px;
+                height: 60%;
+                background:#D2B48C;
+            }
+            &:hover {
+                :global {
+                    .anticon {
+                        transition: all .25s ease;
+                        color: #1E90FF;
+                    }
+                }
+                span {
+                    color: #1E90FF;
+                }
+            }
+            span {
+                transition: all .25s ease;
+                margin-top: 5px;
+            }
+        }
+    }
     :global {
         .ant-card {
             width: 80%;
             height: 80%;
+            position: relative;
+        }
+    }
+}
+
+.balanceForm {
+    :global {
+        .ant-form-item-label {
+            text-align: left;
         }
     }
 }
