--- a/src/routes/HomePage/style.less
+++ b/src/routes/HomePage/style.less
@@ -71,5 +71,8 @@
         .ant-form-item-label {
             text-align: left;
         }
+        .ant-input-number {
+            width: 100%;
+        }
     }
 }
