--- a/src/routes/HomePage/style.less
+++ b/src/routes/HomePage/style.less
@@ -14,6 +14,14 @@
            font-weight: bold;
        }
     }
+    .groupPick {
+        width: 100%;
+        :global {
+            .ant-select {
+                width: 100%;
+            }
+        }
+    }
     .moneyOption {
         display: flex;
         justify-content: space-between;
@@ -22,7 +30,7 @@
         left: 0;
         width: 100%;
         height: 56px;
-        padding: 0 48px;
+        padding: 0 5%;
         div {
             display: flex;
             position: relative;
@@ -58,6 +66,12 @@
         }
     }
     :global {
+        .ant-select {
+            width: 120px;
+        }
+        .ant-card-head-title {
+            text-align: left;
+        }
         .ant-card {
             width: 80%;
             height: 80%;
