--- a/src/layouts/layouts.less
+++ b/src/layouts/layouts.less
@@ -20,4 +20,12 @@
 			flex-shrink: 1;
 		}
 	}
+	:global {
+		.ant-spin-nested-loading {
+			height: 100%;
+		}
+		.ant-spin-container {
+			height: 100%;
+		}
+	}
 }
